styles for other pages

--- a/Syllabus.html
+++ b/Syllabus.html
@@ -82,13 +82,24 @@
     </main>
 
     <footer>
-        <a href="index.html"><p>&copy; 2024 Course Syllabus</p></a>
-        <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
-        <ul class="social-media">
-            <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-            <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
-        </ul>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>About Us</h3>
+                <p><a href="https://scriet.ccsuniversity.ac.in/">Department of Computer Application</a></p>
+                <p>We provide comprehensive resources for B.Sc (Hons) Computer Science students, including previous year
+                    question papers, software tools, video tutorials, and course syllabus.</p>
+            </div>
+            <div class="footer-section developer">
+                <h3>Developer</h3>
+                <p>Developed by Jatin. For any queries or support, please reach out via email at <a
+                        href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbhDtjvhFLVtLFdBZCbzNLmpztNNrxpMrzptPSqRMQHffmfmS"
+                        target="_blank">gerajatin@icloud.com</a>
+                    or visit our <a href="contacts/contact.html">Contact Page</a> for more information.</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 Department of Computer Application. All rights reserved.</p>
+        </div>
     </footer>
 
     <script>
