--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
             <div class="footer-section developer">
                 <h3>Developer</h3>
                 <p>Developed by Jatin. For any queries or support, please reach out via email at <a
-                        href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbhDtjvhFLVtLFdBZCbzNLmpztNNrxpMrzptPSqRMQHffmfmS"  target="_blank">gerajatin@icloud.com</a>
+                        href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbhDtjvhFLVtLFdBZCbzNLmpztNNrxpMrzptPSqRMQHffmfmS"
+                        target="_blank">gerajatin@icloud.com</a>
                     or visit our <a href="contacts/contact.html">Contact Page</a> for more information.</p>
             </div>
         </div>
