--- a/video_resources.html
+++ b/video_resources.html
@@ -18,7 +18,70 @@
     <link rel="shortcut icon" href="styles/icons/emoji.png" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+<style>
+    /* Footer Styles */
+footer {
+    background-color: #f4f4f4;
+    color: #333;
+    text-align: center;
+    padding: 0px 0;
+    border-top: 2px solid #ddd;
+    box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+}
 
+body.dark footer {
+    background-color: #111;
+    color: #eee;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+    
+}
+
+.footer-section {
+    flex: 1;
+    margin: 10px;
+    min-width: 200px;
+    text-align: left;
+}
+
+.footer-section h3 {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.footer-section a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.footer-section a:hover {
+    text-decoration: underline;
+}
+
+.footer-bottom {
+    background-color: #222;
+    padding: 10px ;
+    margin-top: 20px;
+    color: #ffffff;
+    font-size: 14px;
+}
+
+body.dark .footer-bottom {
+    background-color: #111;
+    color: #eee;
+}
+
+</style>
 <body>
     <header>
         <div class="department-title" id="home-button">
@@ -207,8 +270,24 @@
     </main>
 
     <footer>
-        <a href="index.html"><p>&copy; 2024 Video Resources</p></a>
-        <p class="contact-footer"><a href="contacts/contact.html">Contact</a></p>
+        <div class="footer-content">
+            <div class="footer-section about">
+                <h3>About Us</h3>
+                <p><a href="https://scriet.ccsuniversity.ac.in/">Department of Computer Application</a></p>
+                <p>We provide comprehensive resources for B.Sc (Hons) Computer Science students, including previous year
+                    question papers, software tools, video tutorials, and course syllabus.</p>
+            </div>
+            <div class="footer-section developer">
+                <h3>Developer</h3>
+                <p>Developed by Jatin. For any queries or support, please reach out via email at <a
+                        href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbhDtjvhFLVtLFdBZCbzNLmpztNNrxpMrzptPSqRMQHffmfmS"
+                        target="_blank">gerajatin@icloud.com</a>
+                    or visit our <a href="contacts/contact.html">Contact Page</a> for more information.</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2023 Department of Computer Application. All rights reserved.</p>
+        </div>
     </footer>
 
     <script>
