--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
             </div>
             <div class="footer-section developer">
                 <h3>Developer</h3>
+                <p>Jatin Gera</p>
                 <p>Developed by Jatin. For any queries or support, please reach out via email at <a
                         href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSDbhDtjvhFLVtLFdBZCbzNLmpztNNrxpMrzptPSqRMQHffmfmS"
                         target="_blank">gerajatin@icloud.com</a>
