--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             onclick="window.location.href='last_year_questions.html';">
 
             <h2><img class="svgd" src="styles/icons/docb.svg" alt=""> <img class="svgl" src="styles/icons/docw.svg"
-                    alt="">&nbsp;Previous-years&nbsp;/&nbsp;Course&nbsp;Books</h2>
+                    alt="">&nbsp;Previous-years /&nbsp;Course&nbsp;Books</h2>
             <h4>Find the previous year's exam papers here.</h4>
         </section>
         <!-- <section id="Scholarship" class="content-section" onclick="window.location.href='scholarship.html';">
