--- a/sign_in.html
+++ b/sign_in.html
@@ -68,6 +68,8 @@
 
             // Show sign-out button
             document.getElementById('sign-out').style.display = 'block';
+
+            window.location.href = 'index.html'; // Replace 'homepage.html' with your actual homepage URL
         }
 
         function signOut() {
