--- a/sign_in.html
+++ b/sign_in.html
@@ -69,7 +69,7 @@
             // Show sign-out button
             document.getElementById('sign-out').style.display = 'block';
 
-            window.location.href = 'index.html'; // Replace 'homepage.html' with your actual homepage URL
+            window.location.href = 'index.html'; 
         }
 
         function signOut() {
