--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
         </div>
         <div class="footer-bottom">
             <p>&copy; 2023 Department of Computer Application. All rights reserved.</p>
+            <div class="footer-section"></div>
+                <a  class= "pp" href="Privacy Policy-GCODEDCA.HTML">Privacy Policy</a> | 
+                <a class = "pp " href="t&c.html">Terms and Conditions</a>
+            </div>
         </div>
     </footer>
 
