--- a/sign_in.html
+++ b/sign_in.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-In</title>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js" async defer onload="initClient()"></script>
     <meta name="google-signin-client_id"
         content="997968038883-odr2bj4n68tammj3um2m94hlhlq6nn2b.apps.googleusercontent.com">
     <style>
@@ -62,30 +62,25 @@
 
     <script>
         function onSignIn(googleUser) {
-            // Get user profile information
             const profile = googleUser.getBasicProfile();
             const idToken = googleUser.getAuthResponse().id_token;
 
             // Display user info
             const userInfo = document.getElementById('user-info');
             userInfo.innerHTML = `
-        <p><strong>Name:</strong> ${profile.getName()}</p>
-        <p><strong>Email:</strong> ${profile.getEmail()}</p>
-        <p><strong>ID Token:</strong> ${idToken}</p>
-    `;
+                <p><strong>Name:</strong> ${profile.getName()}</p>
+                <p><strong>Email:</strong> ${profile.getEmail()}</p>
+                <p><strong>ID Token:</strong> ${idToken}</p>
+            `;
 
             // Show sign-out button
             document.getElementById('sign-out').style.display = 'block';
 
-            // Debug log
             console.log('Redirecting to home page...');
-
-            // Redirect after a delay
             setTimeout(() => {
-                window.location.href = 'index.html'; // Update the path if needed
-            }, 500); // Adjust the delay as necessary
+                window.location.href = 'index.html';
+            }, 500);
         }
-
 
         function signOut() {
             const auth2 = gapi.auth2.getAuthInstance();
@@ -96,7 +91,6 @@
             });
         }
 
-        // Initialize the Google API client
         function initClient() {
             gapi.load('auth2', () => {
                 gapi.auth2.init({
@@ -104,12 +98,6 @@
                 });
             });
         }
-        function onSignIn(googleUser) {
-            alert('Sign-in successful! Redirecting...');
-            window.location.href = 'index.html';
-        }
-        // Load the Google API client
-        gapi.load('client:auth2', initClient);
     </script>
 </body>
 
