--- a/sign_in.html
+++ b/sign_in.html
@@ -7,7 +7,7 @@
     <title>Google Sign-In</title>
     <script src="https://apis.google.com/js/platform.js" async defer onload="initClient()"></script>
     <meta name="google-signin-client_id"
-        content="997968038883-odr2bj4n68tammj3um2m94hlhlq6nn2b.apps.googleusercontent.com">
+        content="1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -35,26 +35,12 @@
         .user-info {
             margin-top: 20px;
         }
-
-        button {
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #4285f4;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #357ae8;
-        }
     </style>
 </head>
 
 <body>
     <div class="container">
-        <h1>Google Sign-In Demo</h1>
+        <h1>Google Sign-In</h1>
         <div class="g-signin2" data-onsuccess="onSignIn"></div>
         <div class="user-info" id="user-info"></div>
         <button id="sign-out" onclick="signOut()" style="display: none;">Sign Out</button>
@@ -76,10 +62,9 @@
             // Show sign-out button
             document.getElementById('sign-out').style.display = 'block';
 
-            console.log('Redirecting to home page...');
-            setTimeout(() => {
-                window.location.href = 'index.html';
-            }, 500);
+            // Redirect to homepage
+            // console.log('Redirecting to home page...');
+            // window.location.href = 'index.html'; // Replace 'index.html' with your actual homepage URL
         }
 
         function signOut() {
@@ -94,7 +79,7 @@
         function initClient() {
             gapi.load('auth2', () => {
                 gapi.auth2.init({
-                    client_id: '997968038883-odr2bj4n68tammj3um2m94hlhlq6nn2b.apps.googleusercontent.com'
+                    client_id: '1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com'
                 });
             });
         }
