--- a/sign_in.html
+++ b/sign_in.html
@@ -63,8 +63,8 @@
             document.getElementById('sign-out').style.display = 'block';
 
             // Redirect to homepage
-            // console.log('Redirecting to home page...');
-            // window.location.href = 'index.html'; // Replace 'index.html' with your actual homepage URL
+            console.log('Redirecting to home page...');
+            window.location.href = 'index.html'; // Replace 'index.html' with your actual homepage URL
         }
 
         function signOut() {
