--- a/sign_in.html
+++ b/sign_in.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-In</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="YOUR_NEW_CLIENT_ID.apps.googleusercontent.com">
+    <meta name="google-signin-client_id" content="1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -101,7 +101,7 @@
         function initClient() {
             gapi.load('auth2', () => {
                 gapi.auth2.init({
-                    client_id: 'YOUR_NEW_CLIENT_ID.apps.googleusercontent.com'
+                    client_id: '1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com'
                 });
             });
         }
