--- a/sign_in.html
+++ b/sign_in.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-In</title>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <meta name="google-signin-client_id" content="1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com">
+    <meta name="google-signin-client_id"
+        content="1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +34,7 @@
             align-content: flex-start;
             flex-wrap: nowrap;
             flex-direction: column;
-           
+
         }
 
         .user-info {
@@ -85,8 +86,6 @@
             // Redirect to homepage
             console.log('Redirecting to home page...');
             window.location.href = 'index.html'; // Replace 'index.html' with your actual homepage URL
-            document.getElementById('sign-out').style.display = 'block';
-            document.getElementById('redirect-button').style.display = 'inline-block';
         }
 
         function signOut() {
@@ -99,24 +98,24 @@
         }
 
         function initClient() {
-        gapi.load('auth2', () => {
-            gapi.auth2.init({
-                client_id: '1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com'
-            }).then(() => {
-                // Attach the sign-in event handler
-                gapi.auth2.getAuthInstance().isSignedIn.listen((isSignedIn) => {
-                    if (isSignedIn) {
+            gapi.load('auth2', () => {
+                gapi.auth2.init({
+                    client_id: '1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com'
+                }).then(() => {
+                    // Attach the sign-in event handler
+                    gapi.auth2.getAuthInstance().isSignedIn.listen((isSignedIn) => {
+                        if (isSignedIn) {
+                            onSignIn(gapi.auth2.getAuthInstance().currentUser.get());
+                        }
+                    });
+
+                    // Check if user is already signed in
+                    if (gapi.auth2.getAuthInstance().isSignedIn.get()) {
                         onSignIn(gapi.auth2.getAuthInstance().currentUser.get());
                     }
                 });
-
-                // Check if user is already signed in
-                if (gapi.auth2.getAuthInstance().isSignedIn.get()) {
-                    onSignIn(gapi.auth2.getAuthInstance().currentUser.get());
-                }
             });
-        });
-    }
+        }
 
         gapi.load('client:auth2', initClient);
 
