--- a/sign_in.html
+++ b/sign_in.html
@@ -12,7 +12,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #080833;
-            color: white;
+            color: #333;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,122 +24,127 @@
             text-align: center;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
             padding: 30px;
-            background: #2d2d2d;
+            background: white;
             border-radius: 10px;
+            min-width: 300px;
         }
 
-        .user-info img {
-            border-radius: 50%;
+        .g-signin2 {
+            align-items: center;
+            display: flex;
+            align-content: flex-start;
+            flex-wrap: nowrap;
+            flex-direction: column;
+        }
+
+        .user-info {
+            margin-top: 20px;
+            display: none;
+        }
+
+        .profile-section {
+            display: none;
+            text-align: center;
+        }
+
+        .profile-pic {
             width: 100px;
             height: 100px;
+            border-radius: 50%;
+            margin: 10px auto;
         }
 
-        .redirect-button {
+        .welcome-text {
+            font-size: 24px;
+            color: #333;
+            margin: 15px 0;
+        }
+
+        .email-text {
+            color: #666;
+            margin-bottom: 20px;
+        }
+
+        .button {
             margin-top: 20px;
             padding: 10px 20px;
+            background-color: #2d0e0e;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+        }
+
+        .button:hover {
             background-color: #357ae8;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
         }
 
-        .redirect-button:hover {
-            background-color: #2851a3;
-        }
-
-        .sign-out-button {
+        #sign-out {
+            background-color: #666;
             margin-top: 10px;
-            padding: 10px 20px;
-            background-color: #ff3333;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .sign-out-button:hover {
-            background-color: #cc0000;
         }
     </style>
 </head>
 
 <body>
-    <div class="container" id="sign-in-container">
-        <h1>Google Sign-In</h1>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    </div>
-
-    <div class="container" id="welcome-container" style="display: none;">
-        <div class="user-info" id="user-info">
-            <img src="" alt="Profile Picture" id="profile-pic">
-            <h2 id="welcome-message"></h2>
-            <p id="email"></p>
+    <div class="container">
+        <div id="signin-section">
+            <h1>Google Sign-In</h1>
+            <div class="g-signin2" data-onsuccess="onSignIn"></div>
         </div>
-        <button class="redirect-button" onclick="redirectToResources()">Move to Resources</button>
-        <button class="sign-out-button" onclick="signOut()">Sign Out</button>
+
+        <div id="profile-section" class="profile-section">
+            <img id="profile-pic" class="profile-pic" alt="Profile Picture">
+            <div class="welcome-text">Welcome, <span id="user-name"></span>!</div>
+            <div class="email-text" id="user-email"></div>
+            <button class="button" onclick="redirectToResources()">Move to Resources</button>
+            <button class="button" id="sign-out" onclick="signOut()">Sign Out</button>
+        </div>
     </div>
 
     <script>
         function onSignIn(googleUser) {
             const profile = googleUser.getBasicProfile();
-            const name = profile.getGivenName();
-            const email = profile.getEmail();
-            const profilePic = profile.getImageUrl();
-
-            // Store user info in session storage
-            sessionStorage.setItem('isSignedIn', true);
-            sessionStorage.setItem('name', name);
-            sessionStorage.setItem('email', email);
-            sessionStorage.setItem('profilePic', profilePic);
-
-            // Display user info
-            displayWelcomeMessage(name, email, profilePic);
-        }
-
-        function displayWelcomeMessage(name, email, profilePic) {
-            // Update UI with user info
-            document.getElementById('profile-pic').src = profilePic;
-            document.getElementById('welcome-message').textContent = `Welcome, ${name}!`;
-            document.getElementById('email').textContent = email;
-
-            // Show the welcome container and hide the sign-in container
-            document.getElementById('sign-in-container').style.display = 'none';
-            document.getElementById('welcome-container').style.display = 'block';
-        }
-
-        function redirectToResources() {
-            window.location.href = 'index.html'; // Replace with your actual resources page URL
+            
+            // Hide signin section and show profile section
+            document.getElementById('signin-section').style.display = 'none';
+            document.getElementById('profile-section').style.display = 'block';
+            
+            // Update profile information
+            document.getElementById('profile-pic').src = profile.getImageUrl();
+            document.getElementById('user-name').textContent = profile.getGivenName();
+            document.getElementById('user-email').textContent = profile.getEmail();
         }
 
         function signOut() {
             const auth2 = gapi.auth2.getAuthInstance();
             auth2.signOut().then(() => {
                 console.log('User signed out.');
-                sessionStorage.clear();
-                location.reload(); // Reload the page to reset the UI
+                // Show signin section and hide profile section
+                document.getElementById('signin-section').style.display = 'block';
+                document.getElementById('profile-section').style.display = 'none';
             });
         }
 
-        // Check session storage and Google Sign-In status on page load
-        window.onload = () => {
-            const isSignedIn = sessionStorage.getItem('isSignedIn');
-            const name = sessionStorage.getItem('name');
-            const email = sessionStorage.getItem('email');
-            const profilePic = sessionStorage.getItem('profilePic');
-
-            if (isSignedIn && name && email && profilePic) {
-                // Display welcome message using stored data
-                displayWelcomeMessage(name, email, profilePic);
-            } else {
-                // Initialize Google API client if not signed in
-                gapi.load('auth2', () => {
-                    gapi.auth2.init({
-                        client_id: '1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com'
-                    });
+        function initClient() {
+            gapi.load('auth2', () => {
+                gapi.auth2.init({
+                    client_id: '1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com'
+                }).then(() => {
+                    // Check if user is already signed in
+                    if (gapi.auth2.getAuthInstance().isSignedIn.get()) {
+                        onSignIn(gapi.auth2.getAuthInstance().currentUser.get());
+                    }
                 });
-            }
-        };
+            });
+        }
+
+        gapi.load('client:auth2', initClient);
+
+        function redirectToResources() {
+            window.location.href = 'index.html';
+        }
     </script>
 </body>
 
