--- a/sign_in.html
+++ b/sign_in.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-In</title>
-
+    <link rel="stylesheet" href="styles/main.css">
+    <!-- Load Google Platform Library -->
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <meta name="google-signin-client_id"
         content="1075773109360-rvvcrkes8lbir14cthkbugqus54iq3p7.apps.googleusercontent.com">
@@ -103,7 +104,7 @@
         </div>
     </div>
 
-    <!-- Load JavaScript files in correct order -->
+    <!-- Load our JavaScript files -->
     <script src="auth.js"></script>
     <script src="ui.js"></script>
     <script src="main.js"></script>
