--- a/sign_in.html
+++ b/sign_in.html
@@ -105,9 +105,9 @@
     </div>
 
     <!-- Load our JavaScript files -->
-    <script src="auth.js"></script>
-    <script src="ui.js"></script>
-    <script src="main.js"></script>
+    <script src="js/auth.js"></script>
+    <script src="js/ui.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
