--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <a class="info_type">
                     <img src="styles/icons/notifi_bl.svg" alt="" class="img_light">
                     <img src="styles/icons/not_yl.svg" alt="" class="img_dark">
-                    <p>No new updates</p>
+                    <p>EXAM SHEDULE OUT</p>
                 </a>
             </div>
         </div>
