timline for sem3 and sem1

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </section>
         <div class="infobullet">
             <div class="info_type">
-                <a class="info_type">
+                <a  href="Exam Schedule for UG Hons. Odd Sem. (Dec-2024) exam.pdf" class="info_type">
                     <img src="styles/icons/notifi_bl.svg" alt="" class="img_light">
                     <img src="styles/icons/not_yl.svg" alt="" class="img_dark">
                     <p>EXAM SHEDULE OUT</p>
